<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="unii.mtg.life.counter">

    <item
        android:id="@+id/settings_startLife"
        android:icon="@drawable/ic_life"
        android:orderInCategory="100"
        android:title="@string/settings_startLife"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/settings_rollDice"

        android:icon="@drawable/ic_dice"
        android:orderInCategory="101"
        android:title="@string/settings_rollDice"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/settings_add_player"
        android:icon="@drawable/ic_person_add"
        android:orderInCategory="102"
        android:title="@string/settings_addPlayer"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/settings_gameTime"
        android:orderInCategory="103"
        android:title="@string/settings_gameTime"/>

    <item
        android:id="@+id/settings_info"
        android:orderInCategory="104"
        android:title="@string/settings_info"/>
    <item
        android:id="@+id/settings_set_counters"
        android:orderInCategory="105"
        android:title="@string/settings_counters"/>
</menu>